# pyr-cloud

./: README.md
backend/api/: .gitignore  Cargo.toml  package-lock.json  package.json  rocket.toml
backend/api/migrations/2022-06-25-171746_user/: down.sql  up.sql
backend/api/migrations/2022-06-29-020006_resources/: down.sql  up.sql
backend/api/src/: app.module.ts  main.rs  mikro-orm.config.ts  schema.rs
backend/api/src/controllers/: auth.controller.ts  bucket.controller.ts  function.controller.ts  resource.controller.ts
backend/api/src/environments/nodejs/base-function/: index.js  package.json
backend/api/src/init/: create-schema.ts
backend/api/src/model/: Bucket.ts  BucketFolder.ts  BucketObject.ts  Function.ts  NewResource.rs  NewUser.rs  Resource.rs  Resource.ts  User.rs  User.ts  mod.rs
backend/api/src/routes/: gateway.rs  login.rs  mod.rs  types.rs
backend/api/src/services/: database.service.ts
backend/environments/python/: index.py
backend/functions/: .gitignore  index.ts  package-lock.json  package.json
backend/functions/model/: DeployRequest.ts  FunctionRequest.ts  IContainer.ts
backend/gateway/: Cargo.toml
backend/runner/: .gitignore  dockerfile  index.ts  package-lock.json  package.json
backend/runner/base/: base.js
backend/runner/model/: Environment.enum.ts
backend/storage/: .gitignore  index.ts  package-lock.json  package.json
backend/storage/src/: app.module.ts
frontend/: package-lock.json  package.json
frontend/src/components/: login.svelte
frontend/src/routes/: __layout.svelte  index.svelte
(+9 files in other folders)
