[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
argon2 = "0.4.0"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }


[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]